<resources>
    <string name="app_name">TFS Course Work</string>
    <string name="activities">Activities</string>
    <string name="courses">My courses</string>
    <string name="profile">Profile</string>
    <string name="edit_button_caption">Edit</string>
    <string name="patronymic">Patronymic</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_error">Last name cannot be empty</string>
    <string name="first_name_error">First name cannot be empty</string>
    <string name="patronymic_error">Patronymic cannot be empty</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="message_dialog_leave_edit_profile">If you leave the editing screen, the changes are not saved.
        Leave?
    </string>
    <string name="edit_profile">Edit profile</string>
    <string name="string_no_user">Please enter your name</string>
    <string name="progress">Progress</string>
    <string name="details">Details</string>

    <string name="rating">Rating</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="homework_done">Homework done</string>
    <string name="tests_completed">Tests completed</string>
    <string name="classes_passed_caption">Passed</string>
    <string name="classes_left_caption">Left</string>
    <string name="points_caption">Points</string>
    <string name="points_count">%.2f points</string>
    <string name="classes_count">%d classes</string>
    <string name="passed">Done</string>
    <string name="not_passed">Undone</string>
    <string name="passed_courses">Passed courses</string>
    <string name="user">User</string>
    <string name="change_layout">Change layout</string>
    <string name="add_contact">Add contact</string>
    <string name="delete_contact">Delete contact</string>
    <string name="mix_contact">Mix contacts</string>
    <string name="nothing_delete">Nothing to delete</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_info">There is error with connection to database. No Internet?</string>
    <string name="auth_success">Auth success</string>
    <string name="send_before">Send before</string>
    <string name="lectures">Lectures</string>
    <string name="tasks">Tasks</string>
    <string name="error_no_user_auth">No logged in user</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_by_marks">Sort by marks</string>
    <string name="unknown_error">Unknown error</string>
    <string name="search">Search</string>
    <string name="no_students_message">No students. Try to refresh page</string>
    <string name="empty_lectures_message">No lectures found. Try to refresh page</string>
    <plurals name="plurals_marks">
        <item quantity="zero">%s points</item>
        <item quantity="one">%s point</item>
        <item quantity="other">%s points</item>
    </plurals>
    <plurals name="plurals_marks_simple">
        <item quantity="zero">points</item>
        <item quantity="one">point</item>
        <item quantity="other">points</item>
    </plurals>
    <string name="you">You</string>
    <string name="student_search">Student search</string>
    <string name="please_correct_email">Please enter correct e-mail</string>
    <string name="please_correct_password">Please enter non-empty password</string>
    <string name="fintech_school_logo">Fintech school logo</string>
    <string name="past_activities_label">Past</string>
    <string name="schoolchildren">Schoolchildren</string>
    <string name="internship">Internship</string>
    <string name="activity">Activity</string>
    <string name="spec_course">Special course</string>
    <string name="fintech">Fintech school</string>
    <string name="activities_count">All %d</string>
    <string name="no_past_events">No past events found</string>
    <string name="more_info">More info</string>
    <string name="sign_of_overall_rating">Sign of overall rating</string>
    <string name="rating_no_students">No students in rating</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="region">Region</string>
    <string name="school">School</string>
    <string name="school_graduation">School graduation year</string>
    <string name="university">University</string>
    <string name="university_graduation">University graduation year</string>
    <string name="faculty">Faculty</string>
    <string name="department">Department</string>
    <string name="work">Current work</string>
    <string name="resume">Resume</string>
    <string name="education">Education</string>
    <string name="work_header">Work</string>
    <string name="contact_info">Contact info</string>
    <string name="active_activities_label">Active</string>
</resources>
