<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/change_layout"
        android:icon="@drawable/ic_list"
        android:title="@string/change_layout"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort_alpha"
        android:icon="@drawable/ic_action_sort_2"
        android:title="@string/sort_alphabetically"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_marks"
        android:icon="@drawable/ic_action_sort_1"
        android:title="@string/sort_by_marks"
        app:showAsAction="ifRoom" />

</menu>