<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:id="@+id/lastNameLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/last_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/lastNameLayout"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/first_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patronymicLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patronymic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/patronymic"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/save"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/patronymicLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/cancel"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/patronymicLayout" app:layout_constraintStart_toEndOf="@id/btnSave"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>