<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".activities.LoginActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="206dp"
            android:layout_height="174dp"
            android:layout_margin="77dp"
            android:background="@color/login_back"
            android:contentDescription="@string/fintech_school_logo"
            android:src="@drawable/golden_horse" />

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:indeterminateTint="#fff"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_form_height"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edittext_bg"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:letterSpacing="0.04"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@android:color/white"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_form_height"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edittext_bg"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:letterSpacing="0.04"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@android:color/white"
                android:textStyle="normal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_form_height"
                android:backgroundTint="#FFFF00"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>