<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/materialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/elevation"
    app:cardCornerRadius="@dimen/corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/caption_rating"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/rating"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/caption_details"
                style="@style/TextAppearance.MaterialComponents.Tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="end"
                android:text="@string/details"
                android:textSize="16sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/overall_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overall_rating"
            app:layout_constraintStart_toStartOf="@+id/guideline_middle"
            app:layout_constraintTop_toTopOf="@+id/common_rating" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_action_star_10"
            app:layout_constraintBottom_toBottomOf="@+id/overall_rating"
            app:layout_constraintStart_toEndOf="@+id/overall_rating"
            app:layout_constraintTop_toTopOf="@+id/overall_rating" />

        <TextView
            android:id="@+id/caption_tests_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tests_completed"
            app:layout_constraintStart_toStartOf="@+id/guideline_middle"
            app:layout_constraintTop_toTopOf="@+id/tests_rating" />

        <TextView
            android:id="@+id/caption_homework_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/homework_done"
            app:layout_constraintEnd_toStartOf="@id/barrier"
            app:layout_constraintStart_toStartOf="@+id/guideline_middle"
            app:layout_constraintTop_toTopOf="@+id/homework_rating" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/common_rating"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            tools:text="2/30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout" />

        <TextView
            android:id="@+id/tests_rating"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            tools:text="15/18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/common_rating" />

        <TextView
            android:id="@+id/homework_rating"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            tools:text="8888/99999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tests_rating" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="homework_rating,common_rating,tests_rating"
            tools:layout_editor_absoluteX="411dp" />

        <TextView
            android:id="@+id/points"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:text="184"
            app:layout_constraintBottom_toTopOf="@+id/caption_points"
            app:layout_constraintEnd_toStartOf="@+id/guideline_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/overall_rating"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/caption_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/points_caption"
            app:layout_constraintBottom_toTopOf="@+id/guideline_progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/points"
            app:layout_constraintStart_toStartOf="@+id/points"
            app:layout_constraintTop_toBottomOf="@id/points"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/total_classes"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:text="@string/classes_count"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_progress_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>